--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,3 +14,10 @@ vscode:
     - ms-toolsai.jupyter
     - ms-toolsai.jupyter-keymap
     - ms-toolsai.jupyter-renderers
+    - CoenraadS.bracket-pair-colorizer
+    - luma.jupyter
+    - ms-toolsai.vscode-jupyter-cell-tags
+    - ms-toolsai.vscode-jupyter-slideshow
+    - esbenp.prettier-vscode
+    - samuelcolvin.jinjahtml
+    - redwan-hossain.auto-rename-tag-clone
